# comfyui-history-guru

./: .cursorrules  .gitignore  CHANGELOG.md  Guru Manager ChromeEdge Edition.html  Guru Manager Firefox Edition.html  Guru Manager.html  Guru Universal Node Version 3.3.html  Guru Universal Node Version.html  INDEX.md  README_QUICK_START.md  Read.md  Readme.md  guru default save image node only.html  guru.html
.cursor/: coding_guru.md  spec.md
Archive/comfyui-prompt-library-session-backup/: .gitignore  CHANGELOG.md  CODE_REVIEW_ANALYSIS.md  EXAMPLES.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  __init__.py  prompt_library.py  prompt_library_viewer.py  pyproject.toml  requirements.txt
Archive/comfyui-prompt-library-session-backup/js/: prompt_library.js  prompt_library_viewer.js
Archive/comfyui-prompt-library-session-backup/py/: __init__.py  api_routes.py  config.py  database.py  image_processor.py  metadata_extractor.py
Archive/comfyui-prompt-library-session-backup/utils/: __init__.py  helpers.py
Archive/comfyui-prompt-library-session-backup/web/: app.js  index.html  style.css
Older Versions/: Guru Manager Backup.html  Guru Manager Original Code v1.html  guru default save image node only.html  guru.html
apps/: Guru Manager Original Code.html  Guru Manager.html  Guru Universal Node Version 3.3.html  index.html  test_guru_manager.html
backup/: Guru Manager_20251219_130722.html  Guru Manager_20251219_131726.html  Guru Manager_20251219_132156.html  Guru Manager_20251219_132708.html  Guru Manager_20251219_132927.html  (+1 more)
(+57 files in other folders)
